# ezp

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci-.yml  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  Doxyfile  README.md  bump.sh  dockerfile  index.html  mkdocs.yml  pardiso.memleak.c  requirements.txt  test.py  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: .codecov.yml
.github/workflows/: documentation.yml  example.yml  master.yml  sync.yml
Guide/Custom/: index.html
Guide/MPI/: index.html
Guide/Standalone/: index.html
Guide/Useage/: index.html
Intro/Compilation/: index.html
Intro/Motivation/: index.html
Solvers/Dense/pdbsv/: index.html
Solvers/Dense/pgbsv/: index.html
Solvers/Dense/pgesv/: index.html
Solvers/Dense/pgesvx/: index.html
Solvers/Dense/ppbsv/: index.html
Solvers/Dense/pposv/: index.html
Solvers/Dense/pposvx/: index.html
Solvers/Sparse/lis/: index.html
Solvers/Sparse/mumps/: index.html
Solvers/Sparse/pardiso/: index.html
docs/: .pages
docs/Guide/: Custom.md  MPI.md  Standalone.md  Usage.md
docs/Intro/: .pages  Compilation.md  Motivation.md
docs/Solvers/Dense/: pdbsv.md  pgbsv.md  pgesv.md  pgesvx.md  ppbsv.md  pposv.md  pposvx.md
docs/Solvers/Sparse/: lis.md  mumps.md  pardiso.md
docs/javascripts/: mathjax.js
doxygen/html/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000000_000001.html  dir_000001_000002.html  dir_000002_000003.html  dir_000003_000001.html  dir_000003_000002.html  dir_000004_000001.html  dir_000004_000002.html  dir_40cf5aa21829a5d939db52a18c365e13.html  dir_40cf5aa21829a5d939db52a18c365e13.js  dir_40cf5aa21829a5d939db52a18c365e13_dep.map  dir_40cf5aa21829a5d939db52a18c365e13_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_9bab93f0d59ed1c7ed9e7c51e9b9c797.html  dir_9bab93f0d59ed1c7ed9e7c51e9b9c797_dep.map  dir_9bab93f0d59ed1c7ed9e7c51e9b9c797_dep.md5  dir_a85023a8420daaed5b8c620d6ec875fb.html  dir_a85023a8420daaed5b8c620d6ec875fb.js  dir_a85023a8420daaed5b8c620d6ec875fb_dep.map  dir_a85023a8420daaed5b8c620d6ec875fb_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d95b5ff10a11ca30fd35fcb9ea0cf009.html  dir_d95b5ff10a11ca30fd35fcb9ea0cf009_dep.map  dir_d95b5ff10a11ca30fd35fcb9ea0cf009_dep.md5  dir_debc596efc0b708e9b1f9d83fa3b3811.html  dir_debc596efc0b708e9b1f9d83fa3b3811.js  files.html  files_dup.js  functions.html  functions_func.html  (+112 more)
doxygen/html/d0/d05/: classezp_1_1pposvx.html  classezp_1_1pposvx.js
doxygen/html/d0/d2e/: structezp_1_1sparse__coo__mat-members.html
doxygen/html/d0/d33/: classbandsymm__mat.html  classbandsymm__mat.js
doxygen/html/d0/d36/: classmat.html  classmat.js
doxygen/html/d0/d39/: structLIS__MATRIX__STRUCT.html  structLIS__MATRIX__STRUCT.js
doxygen/html/d0/d47/: structezp_1_1WorkType_3_01double_01_4.html  structezp_1_1WorkType_3_01double_01_4.js
doxygen/html/d0/d4f/: pgbsv_8hpp.html  pgbsv_8hpp.js  pgbsv_8hpp_source.html
doxygen/html/d0/d58/: structezp_1_1full__mat.html
doxygen/html/d0/d73/: pardiso_8parser_8hpp.html  pardiso_8parser_8hpp.js  pardiso_8parser_8hpp_source.html
doxygen/html/d0/d77/: structLIS__VECTOR__STRUCT.html  structLIS__VECTOR__STRUCT.js
doxygen/html/d0/d90/: conceptezp_1_1full__container__t.html
doxygen/html/d0/d97/: classezp_1_1detail_1_1lis__base__coll__graph.map  (+1 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  (+2 more)
examples/: example.lis.cpp  example.lis.eigen.cpp  example.mumps.cpp  example.pardiso.coo.cpp  example.pardiso.cpp  example.pdbsv.cpp  example.pgbsv.cpp  example.pgesv.cpp  example.pgesvx.cpp  example.ppbsv.cpp  example.pposv.cpp  example.pposvx.cpp
ezp/: ezp  ezp.dense  ezp.sparse  lis.hpp  mumps.hpp  mumps.parser.hpp  pardiso.hpp  pardiso.parser.hpp  parser.hpp  pdbsv.hpp  pgbsv.hpp  pgesv.hpp  pgesvx.hpp  ppbsv.hpp  pposv.hpp  pposvx.hpp
ezp/abstract/: abstract_solver.hpp  band_solver.hpp  ezp.h  full_solver.hpp  sparse_solver.hpp  traits.hpp
include/: ezp.lis.h
include/catch2/: catch_amalgamated.cpp  catchy.cpp  catchy.hpp
misc/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css  mkl_scalapack.h  mumps_process.py
msvc/ezp/: ezp.sln
msvc/ezp/dbsv/: dbsv.vcxproj  dbsv.vcxproj.filters
msvc/ezp/gbsv/: gbsv.vcxproj  gbsv.vcxproj.filters
msvc/ezp/gesv/: gesv.vcxproj  gesv.vcxproj.filters
msvc/ezp/gesvx/: gesvx.vcxproj  gesvx.vcxproj.filters
msvc/ezp/pardiso/: pardiso.vcxproj  pardiso.vcxproj.filters
msvc/ezp/pbsv/: pbsv.vcxproj  pbsv.vcxproj.filters
msvc/ezp/posv/: posv.vcxproj  posv.vcxproj.filters
msvc/ezp/posvx/: posvx.vcxproj  posvx.vcxproj.filters
mumps/: CMakeLists.txt
search/: search_index.json
standalone/: runner.cpp  runner.lis.cpp  runner.lis.py  runner.mumps.cpp  runner.mumps.py  runner.pardiso.cpp  runner.pardiso.py  runner.pdbsv.cpp  runner.pgbsv.cpp  runner.pgesv.cpp  runner.ppbsv.cpp  runner.pposv.cpp  runner.py  solver.full.hpp  solver.lis.cpp  solver.mumps.cpp  solver.pardiso.cpp  solver.pdbsv.cpp  solver.pgbsv.cpp  solver.pgesv.cpp  solver.pgesvx.cpp  solver.ppbsv.cpp  solver.pposv.cpp  solver.pposvx.cpp
tests/: benchmark.cpp  benchmark.mumps.pardiso.cpp  test.mumps.cpp  test.pardiso.cpp  test.pdbsv.cpp  test.pgbsv.cpp  test.pgesv.cpp  test.pgesvx.cpp  test.pgesvx.cxx  test.ppbsv.cpp  test.pposv.cpp  test.pposvx.cpp
(+440 files in other folders)
